<resources>
    <string name="app_name">KotlinExample</string>
    <string name="location_explanation">When the user is in proximity of this location you will be notified. If you want to change it please press the button below</string>
    <string name="change_location">Change</string>

    <string name="my_location">My location</string>
    <string name="new_marker">New place</string>
    <string name="device_picker_explanation">You might choose one of the networks below, so that when the user\'s device is near that network you will be notified</string>
    <string name="pick_a_name">Pick a name you want for this place</string>

    <string name="use_time_interval">Use these time intervals</string>

    <string name="default_time_from">9:00 PM</string>
    <string name="default_time_to">1:00 AM</string>

    <string name="place_code_explanation">This code will be used by other people to subscribe to this place</string>

    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="dismiss_new_place">New place won\'t be created, do you want to exit?</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="finish">Finish</string>
    <string name="subscription_request">New subscription request!</string>
    <string name="user_subscribed_to_your_places">User %1$s just subscribed to one of your places</string>

    <string name="API_PATH">https://awareness-281fa.firebaseapp.com/places/</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
